[gd_scene load_steps=8 format=3 uid="uid://bvs65om8in3ig"]

[ext_resource type="Script" path="res://scripts/main/menu_settings.gd" id="1_t6ysc"]
[ext_resource type="PackedScene" uid="uid://jl3yhiti3v6q" path="res://nodes/ui/menu_settings/settings_general.tscn" id="2_j1egx"]
[ext_resource type="PackedScene" uid="uid://iseofld5qyij" path="res://nodes/ui/menu_settings/settings_video.tscn" id="3_gu2br"]
[ext_resource type="PackedScene" uid="uid://n7vpbnjyfwun" path="res://nodes/ui/menu_settings/settings_audio.tscn" id="4_l25vx"]
[ext_resource type="PackedScene" uid="uid://emj5rr3q76nr" path="res://nodes/ui/menu_settings/settings_extras.tscn" id="5_iafih"]
[ext_resource type="PackedScene" uid="uid://b7cissxkvkmch" path="res://nodes/ui/menu_settings/settings_controls.tscn" id="5_yswas"]
[ext_resource type="PackedScene" uid="uid://qtpdw6ns7ogs" path="res://nodes/ui/menu_settings/settings_debug.tscn" id="6_ckeds"]

[node name="MenuSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t6ysc")

[node name="MSCont" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 15.0
offset_right = -30.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2

[node name="MSVCont" type="VBoxContainer" parent="MSCont"]
layout_mode = 2

[node name="MSTitleHCont" type="HBoxContainer" parent="MSCont/MSVCont"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MSCont/MSVCont/MSTitleHCont"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.133333, 0.133333, 0.133333, 0.784314)

[node name="TitleLabel" type="Label" parent="MSCont/MSVCont/MSTitleHCont"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="MSCont/MSVCont/MSTitleHCont"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.133333, 0.133333, 0.133333, 0.784314)

[node name="MSHCont" type="HBoxContainer" parent="MSCont/MSVCont"]
layout_mode = 2
size_flags_vertical = 3

[node name="MSVCont" type="VBoxContainer" parent="MSCont/MSVCont/MSHCont"]
layout_mode = 2

[node name="MSTabVCont" type="VBoxContainer" parent="MSCont/MSVCont/MSHCont/MSVCont"]
layout_mode = 2
size_flags_vertical = 3

[node name="GeneralButton" type="Button" parent="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
text = "General"

[node name="VideoButton" type="Button" parent="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
text = "Video"

[node name="AudioButton" type="Button" parent="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
text = "Audio"

[node name="ControsButton" type="Button" parent="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
text = "Controls"

[node name="ExtrasButton" type="Button" parent="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
text = "Extras"

[node name="DebugButton" type="Button" parent="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
text = "Degub"

[node name="ColorRect" type="ColorRect" parent="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.133333, 0.133333, 0.133333, 0.784314)

[node name="MSBackHCont" type="HBoxContainer" parent="MSCont/MSVCont/MSHCont/MSVCont"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MSCont/MSVCont/MSHCont/MSVCont/MSBackHCont"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="ApplyButton" type="Button" parent="MSCont/MSVCont/MSHCont/MSVCont/MSBackHCont"]
layout_mode = 2
disabled = true
text = "Apply"

[node name="MSTabsHCont" type="HBoxContainer" parent="MSCont/MSVCont/MSHCont"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Settings_General" parent="MSCont/MSVCont/MSHCont/MSTabsHCont" instance=ExtResource("2_j1egx")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Settings_Video" parent="MSCont/MSVCont/MSHCont/MSTabsHCont" instance=ExtResource("3_gu2br")]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Settings_Audio" parent="MSCont/MSVCont/MSHCont/MSTabsHCont" instance=ExtResource("4_l25vx")]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Settings_Controls" parent="MSCont/MSVCont/MSHCont/MSTabsHCont" instance=ExtResource("5_yswas")]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Settings_Extras" parent="MSCont/MSVCont/MSHCont/MSTabsHCont" instance=ExtResource("5_iafih")]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Settings_Debug" parent="MSCont/MSVCont/MSHCont/MSTabsHCont" instance=ExtResource("6_ckeds")]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/GeneralButton" to="." method="_on_general_button_pressed"]
[connection signal="pressed" from="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/GeneralButton" to="MSCont/MSVCont/MSHCont/MSTabsHCont/Settings_General" method="_on_general_button_pressed"]
[connection signal="pressed" from="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/VideoButton" to="." method="_on_video_button_pressed"]
[connection signal="pressed" from="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/ControsButton" to="." method="_on_contros_button_pressed"]
[connection signal="pressed" from="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/ExtrasButton" to="." method="_on_extras_button_pressed"]
[connection signal="pressed" from="MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/DebugButton" to="." method="_on_debug_button_pressed"]
[connection signal="pressed" from="MSCont/MSVCont/MSHCont/MSVCont/MSBackHCont/BackButton" to="." method="_on_back_button_pressed"]
